# GenesFRFFinal

./: .gitignore  Batch.txt  CMakeLists.txt  EBatch.txt  README.md  requirements.txt
docs/: conf.py  index.rst  modules.rst
genie3/: GENIE3.py  Genie3.R  Linklist.R  Regulators.txt  run_genie3.py
scr/: config.py  main.py
src/: config.py  main.py
src/cpp_implementation/: federated_random_forrests.puml  global_model.cpp  global_model.h  train_local.cpp  train_local.h  utils.cpp  utils.h
src/evaluation/: Fast_evaluation.py  evaluation.py
src/python_implementation/: G3GetLinkList.py  SmallerVIM.py  config.py  helper.py  main.py  run_federated_approach.py  run_genie3_R.py
